force-app/main/default/objects/Applicant/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <label>Tax ID (SSN/ITIN)</label>
    <length>11</length>
    <type>EncryptedText</type>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <description>Social Security Number or Individual Taxpayer Identification Number. Encrypted for PII protection. Masked display (XXX-XX-1234)</description>
</CustomField>