force-app/main/default/objects/Applicant/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <description>Applicant&apos;s work phone number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>